--- a/method_list.html
+++ b/method_list.html
@@ -118,230 +118,242 @@
   
 
   <li class="r2 ">
+    <span class='object_link'><a href="AdminsController.html#create-instance_method" title="AdminsController#create (method)">#create</a></span>
+    <small>AdminsController</small>
+  </li>
+  
+
+  <li class="r1 ">
     <span class='object_link'><a href="Api/VerificationController.html#create-instance_method" title="Api::VerificationController#create (method)">#create</a></span>
     <small>Api::VerificationController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/InstitutionsController.html#create-instance_method" title="Api::InstitutionsController#create (method)">#create</a></span>
     <small>Api::InstitutionsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/SupervisionsController.html#create-instance_method" title="Api::SupervisionsController#create (method)">#create</a></span>
     <small>Api::SupervisionsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/MentorshipsController.html#create-instance_method" title="Api::MentorshipsController#create (method)">#create</a></span>
     <small>Api::MentorshipsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/AggregatedController.html#create-instance_method" title="Api::AggregatedController#create (method)">#create</a></span>
     <small>Api::AggregatedController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/DegreesController.html#create-instance_method" title="Api::DegreesController#create (method)">#create</a></span>
     <small>Api::DegreesController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/PeopleController.html#create-instance_method" title="Api::PeopleController#create (method)">#create</a></span>
     <small>Api::PeopleController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/AdminsController.html#create-instance_method" title="Api::AdminsController#create (method)">#create</a></span>
     <small>Api::AdminsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="ApplicationController.html#current_user-instance_method" title="ApplicationController#current_user (method)">#current_user</a></span>
     <small>ApplicationController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="AuthToken.html#decode-class_method" title="AuthToken.decode (method)">decode</a></span>
     <small>AuthToken</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="FindId.html#degree-class_method" title="FindId.degree (method)">degree</a></span>
     <small>FindId</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Deleter.html#delete_admin-class_method" title="Deleter.delete_admin (method)">delete_admin</a></span>
     <small>Deleter</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Deleter.html#delete_mentorship-class_method" title="Deleter.delete_mentorship (method)">delete_mentorship</a></span>
     <small>Deleter</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Deleter.html#delete_person-class_method" title="Deleter.delete_person (method)">delete_person</a></span>
     <small>Deleter</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Deleter.html#delete_supervision-class_method" title="Deleter.delete_supervision (method)">delete_supervision</a></span>
     <small>Deleter</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Deleter.html#delete_user-class_method" title="Deleter.delete_user (method)">delete_user</a></span>
     <small>Deleter</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="UserController.html#destroy-instance_method" title="UserController#destroy (method)">#destroy</a></span>
     <small>UserController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/VerificationController.html#destroy-instance_method" title="Api::VerificationController#destroy (method)">#destroy</a></span>
     <small>Api::VerificationController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/InstitutionsController.html#destroy-instance_method" title="Api::InstitutionsController#destroy (method)">#destroy</a></span>
     <small>Api::InstitutionsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/SupervisionsController.html#destroy-instance_method" title="Api::SupervisionsController#destroy (method)">#destroy</a></span>
     <small>Api::SupervisionsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/MentorshipsController.html#destroy-instance_method" title="Api::MentorshipsController#destroy (method)">#destroy</a></span>
     <small>Api::MentorshipsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/AggregatedController.html#destroy-instance_method" title="Api::AggregatedController#destroy (method)">#destroy</a></span>
     <small>Api::AggregatedController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/DegreesController.html#destroy-instance_method" title="Api::DegreesController#destroy (method)">#destroy</a></span>
     <small>Api::DegreesController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/PeopleController.html#destroy-instance_method" title="Api::PeopleController#destroy (method)">#destroy</a></span>
     <small>Api::PeopleController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/AdminsController.html#destroy-instance_method" title="Api::AdminsController#destroy (method)">#destroy</a></span>
     <small>Api::AdminsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/VerificationController.html#edit-instance_method" title="Api::VerificationController#edit (method)">#edit</a></span>
     <small>Api::VerificationController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/InstitutionsController.html#edit-instance_method" title="Api::InstitutionsController#edit (method)">#edit</a></span>
     <small>Api::InstitutionsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/SupervisionsController.html#edit-instance_method" title="Api::SupervisionsController#edit (method)">#edit</a></span>
     <small>Api::SupervisionsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/MentorshipsController.html#edit-instance_method" title="Api::MentorshipsController#edit (method)">#edit</a></span>
     <small>Api::MentorshipsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/AggregatedController.html#edit-instance_method" title="Api::AggregatedController#edit (method)">#edit</a></span>
     <small>Api::AggregatedController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/DegreesController.html#edit-instance_method" title="Api::DegreesController#edit (method)">#edit</a></span>
     <small>Api::DegreesController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/PeopleController.html#edit-instance_method" title="Api::PeopleController#edit (method)">#edit</a></span>
     <small>Api::PeopleController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/AdminsController.html#edit-instance_method" title="Api::AdminsController#edit (method)">#edit</a></span>
     <small>Api::AdminsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="AuthToken.html#encode-class_method" title="AuthToken.encode (method)">encode</a></span>
     <small>AuthToken</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="User.html#find_by_credentials-class_method" title="User.find_by_credentials (method)">find_by_credentials</a></span>
     <small>User</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="AutoComplete.html#find_institutions-class_method" title="AutoComplete.find_institutions (method)">find_institutions</a></span>
     <small>AutoComplete</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="AutoComplete.html#find_names-class_method" title="AutoComplete.find_names (method)">find_names</a></span>
     <small>AutoComplete</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="UserController.html#index-instance_method" title="UserController#index (method)">#index</a></span>
     <small>UserController</small>
+  </li>
+  
+
+  <li class="r1 ">
+    <span class='object_link'><a href="AdminsController.html#index-instance_method" title="AdminsController#index (method)">#index</a></span>
+    <small>AdminsController</small>
   </li>
   
 
@@ -538,158 +550,158 @@
   
 
   <li class="r2 ">
+    <span class='object_link'><a href="UserMailer.html#notify_user-class_method" title="UserMailer.notify_user (method)">notify_user</a></span>
+    <small>UserMailer</small>
+  </li>
+  
+
+  <li class="r1 ">
     <span class='object_link'><a href="Search.html#person-class_method" title="Search.person (method)">person</a></span>
     <small>Search</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="FindId.html#person-class_method" title="FindId.person (method)">person</a></span>
     <small>FindId</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="FindDetail.html#person-class_method" title="FindDetail.person (method)">person</a></span>
     <small>FindDetail</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Search.html#person_info-class_method" title="Search.person_info (method)">person_info</a></span>
     <small>Search</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Notifier.html#person_notifications-class_method" title="Notifier.person_notifications (method)">person_notifications</a></span>
     <small>Notifier</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Search.html#relations_by_id-class_method" title="Search.relations_by_id (method)">relations_by_id</a></span>
     <small>Search</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Search.html#relations_by_name-class_method" title="Search.relations_by_name (method)">relations_by_name</a></span>
     <small>Search</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="ErrorsController.html#routing-instance_method" title="ErrorsController#routing (method)">#routing</a></span>
     <small>ErrorsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Mentorship.html#serializer_for_mentorship-instance_method" title="Mentorship#serializer_for_mentorship (method)">#serializer_for_mentorship</a></span>
     <small>Mentorship</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Person.html#serializer_for_person-instance_method" title="Person#serializer_for_person (method)">#serializer_for_person</a></span>
     <small>Person</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Supervision.html#serializer_for_supervision-instance_method" title="Supervision#serializer_for_supervision (method)">#serializer_for_supervision</a></span>
     <small>Supervision</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="UserController.html#show-instance_method" title="UserController#show (method)">#show</a></span>
     <small>UserController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/VerificationController.html#show-instance_method" title="Api::VerificationController#show (method)">#show</a></span>
     <small>Api::VerificationController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/InstitutionsController.html#show-instance_method" title="Api::InstitutionsController#show (method)">#show</a></span>
     <small>Api::InstitutionsController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/SupervisionsController.html#show-instance_method" title="Api::SupervisionsController#show (method)">#show</a></span>
     <small>Api::SupervisionsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/AuditTrailController.html#show-instance_method" title="Api::AuditTrailController#show (method)">#show</a></span>
     <small>Api::AuditTrailController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/MentorshipsController.html#show-instance_method" title="Api::MentorshipsController#show (method)">#show</a></span>
     <small>Api::MentorshipsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/AggregatedController.html#show-instance_method" title="Api::AggregatedController#show (method)">#show</a></span>
     <small>Api::AggregatedController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/DegreesController.html#show-instance_method" title="Api::DegreesController#show (method)">#show</a></span>
     <small>Api::DegreesController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Api/PeopleController.html#show-instance_method" title="Api::PeopleController#show (method)">#show</a></span>
     <small>Api::PeopleController</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Api/AdminsController.html#show-instance_method" title="Api::AdminsController#show (method)">#show</a></span>
     <small>Api::AdminsController</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Information.html#submit_handling-class_method" title="Information.submit_handling (method)">submit_handling</a></span>
     <small>Information</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Notifier.html#supervised-class_method" title="Notifier.supervised (method)">supervised</a></span>
     <small>Notifier</small>
   </li>
   
 
-  <li class="r1 ">
+  <li class="r2 ">
     <span class='object_link'><a href="Notifier.html#supervision_notifications-class_method" title="Notifier.supervision_notifications (method)">supervision_notifications</a></span>
     <small>Notifier</small>
   </li>
   
 
-  <li class="r2 ">
+  <li class="r1 ">
     <span class='object_link'><a href="Notifier.html#supervisors-class_method" title="Notifier.supervisors (method)">supervisors</a></span>
     <small>Notifier</small>
-  </li>
-  
-
-  <li class="r1 ">
-    <span class='object_link'><a href="Api/AggregatedController.html#test-instance_method" title="Api::AggregatedController#test (method)">#test</a></span>
-    <small>Api::AggregatedController</small>
   </li>
   
 
